fix(date-picker): add padding-right to show icon when placeholder is too long #THB-1495

--- a/src/date-picker/style/picker.scss
+++ b/src/date-picker/style/picker.scss
@@ -9,6 +9,9 @@
     transition: opacity 0.3s;
     width: 100%;
     cursor: pointer;
+    .form-control {
+        padding-right: $input-padding-x + $font-size-md;
+    }
 
     &:hover {
         .form-control {
